# webpp

./: CMakeLists.txt  LICENSE  README.md  webppcli.sh
.github/workflows/: ci.yml
assets/: shell.html
examples/emscripten/: main.cpp
examples/vanilla/: main.cpp
shaders/: fragmentShader.glsl  vertexShader.glsl
src/: main.cpp
src/CustomCube/: CustomCube.cpp  CustomCube.hpp
src/GLWindow/: GLWindow.cpp  GLWindow.hpp
src/Shader/: Shader.cpp  Shader.hpp
src/ShaderLoader/: ShaderLoader.cpp  ShaderLoader.hpp
src/Texture/: Texture.cpp  Texture.hpp
src/soil/: SOIL.c
vanilla/: libglfw.so.3
